_cache/v0.18.1/perl/specs.md
---
title: "perl"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["5.34.1"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"tutorial": 2, "radiuss": 1, "data-vis-sdk": 1, "build_systems": 1, "e4s": 1, "root": 6, "aws-isc": 2, "aws-ahug": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2}}
spec_details: [{"hash": "pn5mteswujdkuong6mbqaush54rdas7c", "compiler": "gcc@=7.5.0", "versions": ["5.34.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+cpanm", "+shared", "+threads"], "stacks": ["tutorial", "radiuss", "data-vis-sdk", "build_systems", "e4s", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/perl-5.34.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-perl-5.34.1-pn5mteswujdkuong6mbqaush54rdas7c.spack"}, {"hash": "la5aulrfwxervdnl5ttxdtseckztsvap", "compiler": "gcc@=7.3.1", "versions": ["5.34.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": ["+cpanm", "+shared", "+threads"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/perl-5.34.1/linux-amzn2-x86_64_v4-gcc-7.3.1-perl-5.34.1-la5aulrfwxervdnl5ttxdtseckztsvap.spack"}, {"hash": "ke6tcdaugy36e7ekjxcvwriq4e5fqxfy", "compiler": "gcc@=7.3.1", "versions": ["5.34.1"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": ["+cpanm", "+shared", "+threads"], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/perl-5.34.1/linux-amzn2-graviton2-gcc-7.3.1-perl-5.34.1-ke6tcdaugy36e7ekjxcvwriq4e5fqxfy.spack"}, {"hash": "dvqhup5s7ivhszesv6uvabvcucumknbj", "compiler": "gcc@=7.3.1", "versions": ["5.34.1"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": ["+cpanm", "+shared", "+threads"], "stacks": ["aws-isc-aarch64", "root", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/perl-5.34.1/linux-amzn2-aarch64-gcc-7.3.1-perl-5.34.1-dvqhup5s7ivhszesv6uvabvcucumknbj.spack"}, {"hash": "zxvrdtajh42yja3dowhwc63ienf6mtzg", "compiler": "gcc@=7.3.1", "versions": ["5.34.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": ["+cpanm", "+shared", "+threads"], "stacks": ["root", "aws-isc", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/perl-5.34.1/linux-amzn2-x86_64_v3-gcc-7.3.1-perl-5.34.1-zxvrdtajh42yja3dowhwc63ienf6mtzg.spack"}, {"hash": "yycipnrjt7nlqchwy2uydmgiomjup424", "compiler": "gcc@=8.4.0", "versions": ["5.34.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": ["+cpanm", "+shared", "+threads"], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/perl-5.34.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-perl-5.34.1-yycipnrjt7nlqchwy2uydmgiomjup424.spack"}]
---